# ChangeLog for media-sound/padevchooser
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/padevchooser/Attic/ChangeLog,v 1.13 2008/10/09 21:36:43 flameeyes Exp $

*padevchooser-0.9.3-r1 (09 Oct 2008)

  09 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  +padevchooser-0.9.3-r1.ebuild:
  Update to EAPI=2 and USE deps.

  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
  padevchooser-0.9.3.ebuild:
  Fix HOMEPAGE from padevcontrol to padevchooser.

  11 Feb 2008; Olivier Crête <tester@gentoo.org> padevchooser-0.9.3.ebuild:
  Stable on amd64, bug #204219

  25 Jan 2008; Raúl Porcel <armin76@gentoo.org> padevchooser-0.9.3.ebuild:
  Add ~sparc wrt #207369

  24 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  padevchooser-0.9.3.ebuild:
  Add check for glib USE flag on pulseaudio for next revision.

  03 Jan 2008; Markus Meier <maekke@gentoo.org> padevchooser-0.9.3.ebuild:
  x86 stable, bug #204219

  31 Dec 2007; Joseph Jezak <josejx@gentoo.org> padevchooser-0.9.3.ebuild:
  Marked ~ppc.

  13 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  -padevchooser-0.9.2.ebuild, padevchooser-0.9.3.ebuild:
  Remove old version and add missing dependency over gnome-icon-theme.

  10 Oct 2006; Joshua Jackson <tsunam@gentoo.org> padevchooser-0.9.2.ebuild,
  padevchooser-0.9.3.ebuild:
  adding ~x86 as they build per galtgendo

  04 Oct 2006; Luca Barbato <lu_zero@gentoo.org> ChangeLog:
  Marked ~ppc

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org>
  padevchooser-0.9.2.ebuild, padevchooser-0.9.3.ebuild:
  Check for avahi useflag as it's needed to have libpulse-browse, thanks to
  Alessandro Chirico in bug #145648 for reporting.

*padevchooser-0.9.3 (31 Aug 2006)

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org>
  +padevchooser-0.9.3.ebuild:
  Version bump.

*padevchooser-0.9.2 (17 Jul 2006)

  17 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +padevchooser-0.9.2.ebuild: