@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/padevchooser/Attic/padevchooser-0.9.3-r1.ebuild,v 1.1 2008/10/09 21:36:43 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/padevchooser/Attic/padevchooser-0.9.3-r1.ebuild,v 1.2 2010/03/08 17:04:15 hwoarang Exp $
 
 EAPI=2
 
@@ -12,7 +12,7 @@ SRC_URI="http://0pointer.de/lennart/projects/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~sparc ~x86"
+KEYWORDS="amd64 ~sparc ~x86"
 
 IUSE=""
 
